margin is added to reports

--- a/CV_ManagementSystem/Reports/ReportFullTemp.rdlc
+++ b/CV_ManagementSystem/Reports/ReportFullTemp.rdlc
@@ -298,16 +298,13 @@
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>0.25624cm</Width>
+                  <Width>0.38324cm</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>1.93115cm</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>3.2276cm</Width>
-                </TablixColumn>
-                <TablixColumn>
-                  <Width>0.60823cm</Width>
+                  <Width>3.65062cm</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -404,36 +401,6 @@
                         </Textbox>
                       </CellContents>
                     </TablixCell>
-                    <TablixCell>
-                      <CellContents>
-                        <Textbox Name="Textbox41">
-                          <CanGrow>true</CanGrow>
-                          <KeepTogether>true</KeepTogether>
-                          <Paragraphs>
-                            <Paragraph>
-                              <TextRuns>
-                                <TextRun>
-                                  <Value />
-                                  <Style />
-                                </TextRun>
-                              </TextRuns>
-                              <Style />
-                            </Paragraph>
-                          </Paragraphs>
-                          <rd:DefaultName>Textbox36</rd:DefaultName>
-                          <Style>
-                            <Border>
-                              <Style>None</Style>
-                            </Border>
-                            <BackgroundColor>Black</BackgroundColor>
-                            <PaddingLeft>2pt</PaddingLeft>
-                            <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
-                          </Style>
-                        </Textbox>
-                      </CellContents>
-                    </TablixCell>
                   </TablixCells>
                 </TablixRow>
                 <TablixRow>
@@ -485,36 +452,6 @@
                       </CellContents>
                     </TablixCell>
                     <TablixCell />
-                    <TablixCell>
-                      <CellContents>
-                        <Textbox Name="Textbox31">
-                          <CanGrow>true</CanGrow>
-                          <KeepTogether>true</KeepTogether>
-                          <Paragraphs>
-                            <Paragraph>
-                              <TextRuns>
-                                <TextRun>
-                                  <Value />
-                                  <Style />
-                                </TextRun>
-                              </TextRuns>
-                              <Style />
-                            </Paragraph>
-                          </Paragraphs>
-                          <rd:DefaultName>Textbox23</rd:DefaultName>
-                          <Style>
-                            <Border>
-                              <Style>None</Style>
-                            </Border>
-                            <BackgroundColor>Black</BackgroundColor>
-                            <PaddingLeft>2pt</PaddingLeft>
-                            <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
-                          </Style>
-                        </Textbox>
-                      </CellContents>
-                    </TablixCell>
                   </TablixCells>
                 </TablixRow>
                 <TablixRow>
@@ -616,36 +553,6 @@
                         </Textbox>
                       </CellContents>
                     </TablixCell>
-                    <TablixCell>
-                      <CellContents>
-                        <Textbox Name="Textbox5">
-                          <CanGrow>true</CanGrow>
-                          <KeepTogether>true</KeepTogether>
-                          <Paragraphs>
-                            <Paragraph>
-                              <TextRuns>
-                                <TextRun>
-                                  <Value />
-                                  <Style />
-                                </TextRun>
-                              </TextRuns>
-                              <Style />
-                            </Paragraph>
-                          </Paragraphs>
-                          <rd:DefaultName>Textbox5</rd:DefaultName>
-                          <Style>
-                            <Border>
-                              <Style>None</Style>
-                            </Border>
-                            <BackgroundColor>Black</BackgroundColor>
-                            <PaddingLeft>2pt</PaddingLeft>
-                            <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
-                          </Style>
-                        </Textbox>
-                      </CellContents>
-                    </TablixCell>
                   </TablixCells>
                 </TablixRow>
                 <TablixRow>
@@ -719,38 +626,6 @@
                       </CellContents>
                     </TablixCell>
                     <TablixCell />
-                    <TablixCell>
-                      <CellContents>
-                        <Textbox Name="Textbox43">
-                          <CanGrow>true</CanGrow>
-                          <KeepTogether>true</KeepTogether>
-                          <Paragraphs>
-                            <Paragraph>
-                              <TextRuns>
-                                <TextRun>
-                                  <Value />
-                                  <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
-                                  </Style>
-                                </TextRun>
-                              </TextRuns>
-                              <Style />
-                            </Paragraph>
-                          </Paragraphs>
-                          <rd:DefaultName>Textbox24</rd:DefaultName>
-                          <Style>
-                            <Border>
-                              <Style>None</Style>
-                            </Border>
-                            <BackgroundColor>Black</BackgroundColor>
-                            <PaddingLeft>2pt</PaddingLeft>
-                            <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
-                          </Style>
-                        </Textbox>
-                      </CellContents>
-                    </TablixCell>
                   </TablixCells>
                 </TablixRow>
                 <TablixRow>
@@ -841,38 +716,6 @@
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Nationality</rd:DefaultName>
-                          <Style>
-                            <Border>
-                              <Style>None</Style>
-                            </Border>
-                            <BackgroundColor>Black</BackgroundColor>
-                            <PaddingLeft>2pt</PaddingLeft>
-                            <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
-                          </Style>
-                        </Textbox>
-                      </CellContents>
-                    </TablixCell>
-                    <TablixCell>
-                      <CellContents>
-                        <Textbox Name="Textbox46">
-                          <CanGrow>true</CanGrow>
-                          <KeepTogether>true</KeepTogether>
-                          <Paragraphs>
-                            <Paragraph>
-                              <TextRuns>
-                                <TextRun>
-                                  <Value />
-                                  <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
-                                  </Style>
-                                </TextRun>
-                              </TextRuns>
-                              <Style />
-                            </Paragraph>
-                          </Paragraphs>
-                          <rd:DefaultName>Textbox28</rd:DefaultName>
                           <Style>
                             <Border>
                               <Style>None</Style>
@@ -989,45 +832,12 @@
                         </Textbox>
                       </CellContents>
                     </TablixCell>
-                    <TablixCell>
-                      <CellContents>
-                        <Textbox Name="Textbox50">
-                          <CanGrow>true</CanGrow>
-                          <KeepTogether>true</KeepTogether>
-                          <Paragraphs>
-                            <Paragraph>
-                              <TextRuns>
-                                <TextRun>
-                                  <Value />
-                                  <Style>
-                                    <FontFamily>Trebuchet MS</FontFamily>
-                                  </Style>
-                                </TextRun>
-                              </TextRuns>
-                              <Style />
-                            </Paragraph>
-                          </Paragraphs>
-                          <rd:DefaultName>Textbox32</rd:DefaultName>
-                          <Style>
-                            <Border>
-                              <Style>None</Style>
-                            </Border>
-                            <BackgroundColor>Black</BackgroundColor>
-                            <PaddingLeft>2pt</PaddingLeft>
-                            <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
-                          </Style>
-                        </Textbox>
-                      </CellContents>
-                    </TablixCell>
                   </TablixCells>
                 </TablixRow>
               </TablixRows>
             </TablixBody>
             <TablixColumnHierarchy>
               <TablixMembers>
-                <TablixMember />
                 <TablixMember />
                 <TablixMember />
                 <TablixMember />
@@ -1052,7 +862,7 @@
             <Top>0.07042cm</Top>
             <Left>0.39688cm</Left>
             <Height>6.74811cm</Height>
-            <Width>6.02322cm</Width>
+            <Width>5.96501cm</Width>
             <Style>
               <Border>
                 <Style>None</Style>
@@ -1063,13 +873,13 @@
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>0.25623cm</Width>
+                  <Width>0.07938cm</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>0.32237cm</Width>
+                  <Width>0.09001cm</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>5.78857cm</Width>
+                  <Width>5.52046cm</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -1273,7 +1083,7 @@
                               <Style>None</Style>
                             </Border>
                             <BackgroundColor>Black</BackgroundColor>
-                            <VerticalAlign>Middle</VerticalAlign>
+                            <VerticalAlign>Top</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -1298,7 +1108,9 @@
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Left</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Details1</rd:DefaultName>
@@ -1306,6 +1118,7 @@
                             <Border>
                               <Style>None</Style>
                             </Border>
+                            <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -1342,7 +1155,7 @@
             <Top>8.13457cm</Top>
             <Left>0.39688cm</Left>
             <Height>1.8cm</Height>
-            <Width>6.36717cm</Width>
+            <Width>5.68985cm</Width>
             <ZIndex>1</ZIndex>
             <Style>
               <Border>
@@ -1354,13 +1167,13 @@
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>0.25623cm</Width>
+                  <Width>0.12041cm</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>0.32237cm</Width>
+                  <Width>0.18655cm</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>5.78857cm</Width>
+                  <Width>5.38288cm</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -1568,7 +1381,7 @@
                               <Style>None</Style>
                             </Border>
                             <BackgroundColor>Black</BackgroundColor>
-                            <VerticalAlign>Middle</VerticalAlign>
+                            <VerticalAlign>Top</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -1593,7 +1406,9 @@
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Left</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Details</rd:DefaultName>
@@ -1601,6 +1416,7 @@
                             <Border>
                               <Style>None</Style>
                             </Border>
+                            <VerticalAlign>Middle</VerticalAlign>
                             <PaddingLeft>2pt</PaddingLeft>
                             <PaddingRight>2pt</PaddingRight>
                             <PaddingTop>2pt</PaddingTop>
@@ -1637,7 +1453,7 @@
             <Top>13.17625cm</Top>
             <Left>0.39688cm</Left>
             <Height>1.8cm</Height>
-            <Width>6.36717cm</Width>
+            <Width>5.68984cm</Width>
             <ZIndex>2</ZIndex>
             <Style>
               <Border>
@@ -1647,9 +1463,9 @@
           </Tablix>
         </ReportItems>
         <KeepTogether>true</KeepTogether>
-        <Top>0.13229cm</Top>
+        <Top>0.03704cm</Top>
         <Left>13.84601cm</Left>
-        <Height>19.81256cm</Height>
+        <Height>17.9499cm</Height>
         <Width>6.76405cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
@@ -2206,7 +2022,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>Experience2</DataSetName>
-        <Top>20.03305cm</Top>
+        <Top>18.25505cm</Top>
         <Left>0.68793cm</Left>
         <Height>2.76187cm</Height>
         <Width>20.12953cm</Width>
@@ -2399,7 +2215,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>Hobbies</DataSetName>
-        <Top>22.97131cm</Top>
+        <Top>21.19331cm</Top>
         <Left>0.68791cm</Left>
         <Height>1.2cm</Height>
         <Width>20.11297cm</Width>
@@ -2424,13 +2240,13 @@
         </Style>
       </Line>
     </ReportItems>
-    <Height>24.266cm</Height>
+    <Height>22.59383cm</Height>
     <Style />
   </Body>
-  <Width>20.95931cm</Width>
+  <Width>20.98048cm</Width>
   <Page>
     <PageHeader>
-      <Height>2.00616cm</Height>
+      <Height>2.30249cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <ReportItems>
@@ -2438,9 +2254,9 @@
           <Source>Embedded</Source>
           <Value>ECC50YearLogo</Value>
           <Sizing>FitProportional</Sizing>
-          <Top>0.34925cm</Top>
+          <Top>0.6985cm</Top>
           <Left>0.3175cm</Left>
-          <Height>1.43466cm</Height>
+          <Height>1.45054cm</Height>
           <Width>5.16819cm</Width>
           <Style>
             <Border>
@@ -2466,7 +2282,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.28217cm</Top>
+          <Top>0.642cm</Top>
           <Left>14.84838cm</Left>
           <Height>0.54708cm</Height>
           <Width>1.46285cm</Width>
@@ -2500,7 +2316,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.79221cm</Top>
+          <Top>1.17321cm</Top>
           <Left>14.84838cm</Left>
           <Height>0.46771cm</Height>
           <Width>1.46285cm</Width>
@@ -2534,7 +2350,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>1.33208cm</Top>
+          <Top>1.71308cm</Top>
           <Left>14.84838cm</Left>
           <Height>0.46771cm</Height>
           <Width>1.46285cm</Width>
@@ -2568,7 +2384,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.28217cm</Top>
+          <Top>0.642cm</Top>
           <Left>16.34651cm</Left>
           <Height>0.54708cm</Height>
           <Width>4.45437cm</Width>
@@ -2602,7 +2418,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>0.79221cm</Top>
+          <Top>1.17321cm</Top>
           <Left>16.34651cm</Left>
           <Height>0.46771cm</Height>
           <Width>4.45437cm</Width>
@@ -2636,7 +2452,7 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox6</rd:DefaultName>
-          <Top>1.33208cm</Top>
+          <Top>1.71308cm</Top>
           <Left>16.34651cm</Left>
           <Height>0.46771cm</Height>
           <Width>4.45437cm</Width>
@@ -2665,7 +2481,7 @@
       </Style>
     </PageHeader>
     <PageFooter>
-      <Height>0.17462cm</Height>
+      <Height>0.23812cm</Height>
       <PrintOnFirstPage>true</PrintOnFirstPage>
       <PrintOnLastPage>true</PrintOnLastPage>
       <Style>
